SERVER-15389 Refactor initAndListen to create server socket ids early

Also move call to checkIfReplMissingFromCommandLine to happen after
databases have been repaired.